--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="roster-cards-container">
           <!-- Begin Example Student Cards -->
-          <div class="student-card" id="joe-burgess-card">
+          <div class="student-card" id="aurelio-card">
             <a href="students/joe-burgess.html">
               <div class="view-profile-div">
                 <h3 class="view-profile-text">View Profile</h3>
@@ -33,7 +33,7 @@
               </div>
             </a>
           </div>
-          <div class="student-card" id="mathieu-balez-card">
+          <div class="student-card" id="juliana-card">
             <a href="students/mathieu-balez.html">
               <div class="view-profile-div">
                 <h3 class="view-profile-text">View Profile</h3>
@@ -44,7 +44,40 @@
               </div>
             </a>
           </div>
-          <div class="student-card" id="diane-vu-card">
+          <div class="student-card" id="taysa-card">
+            <a href="students/mathieu-balez.html">
+              <div class="view-profile-div">
+                <h3 class="view-profile-text">View Profile</h3>
+              </div>
+              <div class="card-text-container">
+                <h4 class="student-name">Mathieu Balez</h4>
+                <p class="student-location">New York, NY</p>
+              </div>
+            </a>
+          </div>
+          <div class="student-card" id="noah-card">
+            <a href="students/mathieu-balez.html">
+              <div class="view-profile-div">
+                <h3 class="view-profile-text">View Profile</h3>
+              </div>
+              <div class="card-text-container">
+                <h4 class="student-name">Mathieu Balez</h4>
+                <p class="student-location">New York, NY</p>
+              </div>
+            </a>
+          </div>
+          <div class="student-card" id="hayden-card">
+            <a href="students/mathieu-balez.html">
+              <div class="view-profile-div">
+                <h3 class="view-profile-text">View Profile</h3>
+              </div>
+              <div class="card-text-container">
+                <h4 class="student-name">Mathieu Balez</h4>
+                <p class="student-location">New York, NY</p>
+              </div>
+            </a>
+          </div>
+          <div class="student-card" id="betsy-card">
             <a href="students/diane-vu.html">
               <div class="view-profile-div">
                 <h3 class="view-profile-text">View Profile</h3>
