--- a/students/aurelio-ayala.html
+++ b/students/aurelio-ayala.html
@@ -17,7 +17,7 @@
       </header>
       <div class="profile-banner" id="aurelio-ayala-cover"><img src="https://imgur.com/a/flxJN2Q.jpg" alt="aurelio-ayala-cover"></div>
       <div class="vitals-container">
-        <div class="profile-photo" id="aurelio-ayala-card"><img src="https://imgur.com/a/C30RQNa.jpg" alt="aurelio-ayala-cover"></div>
+        <div class="profile-photo" id="aurelio-ayala-card"><img src="https://imgur.com/a/C30RQNa.jpg" alt="aurelio-ayala-profile"></div>
         <div class="social-icon-container">
           <a href="https://twitter.com/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
           <a href="https://www.linkedin.com/in/aurelio-ayala/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
