--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
             </a>
           </div>
           <div class="student-card" id="hayden-card">
-            <a href="students/mathieu-balez.html">
+            <a href="students/hayden-cohen.html">
               <div class="view-profile-div">
                 <h3 class="view-profile-text">View Profile</h3>
               </div>
               <div class="card-text-container">
-                <h4 class="student-name">Mathieu Balez</h4>
+                <h4 class="student-name">Hayden Cohen</h4>
                 <p class="student-location">New York, NY</p>
               </div>
             </a>
