--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
               </div>
             </a>
           </div>
-          <div class="student-card" id="taysa-card">
-            <a href="students/mathieu-balez.html">
+          <div class="student-card" id="taysa-mohler-card">
+            <a href="students/taysa-mohler.html">
               <div class="view-profile-div">
                 <h3 class="view-profile-text">View Profile</h3>
               </div>
               <div class="card-text-container">
-                <h4 class="student-name">Mathieu Balez</h4>
-                <p class="student-location">New York, NY</p>
+                <h4 class="student-name">Taysa Mohler</h4>
+                <p class="student-location">California</p>
               </div>
             </a>
           </div>
