--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <div class="roster-cards-container">
           <!-- Begin Example Student Cards -->
           <div class="student-card" id="aurelio-card">
-            <a href="students/joe-burgess.html">
+            <a href="students/aurelio-ayala.html">
               <div class="view-profile-div">
                 <h3 class="view-profile-text">View Profile</h3>
               </div>
               <div class="card-text-container">
-                <h4 class="student-name">Joe Burgess</h4>
-                <p class="student-location">New York, NY</p>
+                <h4 class="student-name">Aurelio E. Ayala</h4>
+                <p class="student-location">Texas</p>
               </div>
             </a>
           </div>
