--- a/students/hayden-cohen.html
+++ b/students/hayden-cohen.html
@@ -15,9 +15,9 @@
         </a>
         <h4 class="header-text">VFA Training</h4>
       </header>
-      <div class="profile-banner" id="joe-burgess-cover"></div>
+      <div class="profile-banner" id="hayden-cohen-cover"><img src="https://i.imgur.com/un6HiK2.png"></div>
       <div class="vitals-container">
-        <div class="profile-photo" id="joe-burgess-card"></div>
+        <div class="profile-photo" id="hayden-cohen-card"><img src="https://i.imgur.com/BbP3dBo.jpg"></div>
         <div class="social-icon-container">
           <a href="https://twitter.com/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
           <a href="https://www.linkedin.com/in/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
