--- a/students/hayden-cohen.html
+++ b/students/hayden-cohen.html
@@ -19,14 +19,13 @@
       <div class="vitals-container">
         <div class="profile-photo" id="hayden-cohen-card"><img src="https://i.imgur.com/BbP3dBo.jpg"></div>
         <div class="social-icon-container">
-          <a href="https://twitter.com/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
-          <a href="https://www.linkedin.com/in/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
+          <a href="  https://www.linkedin.com/in/hayden-cohen-b6663176/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
           <a href="https://github.com/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
         </div>
         <div class="vitals-text-container">
-          <h1 class="profile-name">Joe Burgess</h1>
+          <h1 class="profile-name">Hayden Cohen</h1>
           <h2 class="profile-location">New York, NY</h2>
-          <div class="profile-quote">"Reduce to a previously solved problem"</div>
+          <div class="profile-quote">"Put... the bunny... back... in the box." — Con Air"</div>
         </div>
       </div>
       <div class="details-container">
@@ -36,7 +35,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>I grew up outside of the Washington DC (NoVA!) and went to college at Carnegie Mellon University in Pittsburgh. After college, I worked as an Oracle consultant for IBM for a bit and now I teach here at The Flatiron School.</p>
+              <p>I'm from New York even though I left when I was two.</p>
             </div>
           </div>
         </div>
