--- a/students/hayden-cohen.html
+++ b/students/hayden-cohen.html
@@ -45,8 +45,8 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-              <h4>Carnegie Mellon University</h4>
-              <h5>Bachelor of Science in Information Systems and Economics</h5>
+              <h4>William and Mary</h4>
+              <h5>BBA</h5>
             </div>
           </div>
         </div>
@@ -56,13 +56,10 @@
               <h3>Experience</h3>
             </div>
             <div class="description-holder">
-              <h4>The Flatiron School</h4>
-              <h5>Lead iOS Instructor</h5>
+              <h4>Jamba Juice</h4>
+              <h5>Everything</h5>
             </div>
-            <div class="description-holder">
-              <h4>IBM</h4>
-              <h5>Consultant</h5>
-            </div>
+            
           </div>
         </div>
       </div>
